Fixed new banner not showing up

--- a/app/static/css/landing.css
+++ b/app/static/css/landing.css
@@ -1,7 +1,1 @@
-.bgimg {
-  background-position: center;
-  background-size: cover;
-  background-image: url('/static/css/img/banner.png');
-  min-height: 75%;
-}
 
